--- a/src/components/HeadAnalytic.astro
+++ b/src/components/HeadAnalytic.astro
@@ -1,8 +1,10 @@
 <script is:inline async src="https://www.googletagmanager.com/gtag/js?id=G-YCVPPMMQMB"></script>
 <script is:inline async>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  window.dataLayer = window.dataLayer || []
+  function gtag() {
+    dataLayer.push(arguments)
+  }
+  gtag('js', new Date())
 
-  gtag('config', 'G-YCVPPMMQMB');
+  gtag('config', 'G-YCVPPMMQMB')
 </script>
