--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -118,13 +118,8 @@ const navigationClasses = (path = '/', isRight = false) => {
   <div class="navigation-wrapper">
     <ul class="navigation">
       <li class="logo-wrapper">
-        <a href={'/'}>
-          <img
-            class="logo"
-            src="/images/logo.svg"
-            alt={DEFAULT_TITLE}
-            title={DEFAULT_TITLE}
-          />
+        <a href="/">
+          <img class="logo" src="/images/logo.svg" alt={DEFAULT_TITLE} title={DEFAULT_TITLE} />
         </a>
       </li>
       <li class={navigationClasses('/')}>
