--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -1,6 +1,7 @@
 ---
 import SvgIcon from '@components/SvgIcon.astro'
 ---
+
 <style>
   .social-header {
     margin-bottom: 0.5rem;
@@ -25,7 +26,8 @@ import SvgIcon from '@components/SvgIcon.astro'
     width: 14rem;
   }
 
-  .social-button:hover, .social-button:focus {
+  .social-button:hover,
+  .social-button:focus {
     border-color: hsl(44, 14%, 40%);
     color: hsl(13deg 50% 25%);
   }
@@ -44,66 +46,106 @@ import SvgIcon from '@components/SvgIcon.astro'
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="rss-box" />
     </div>
-    MP3 RSS Feed
+     MP3 RSS Feed
   </a>
   <a class="social-button" href="/rss-aac.xml">
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="cast-audio" />
     </div>
-    AAC RSS Feed
+     AAC RSS Feed
   </a>
-  <a class="social-button" target="_blank" rel="noopener noreferrer" href="https://itunes.apple.com/podcast/rwpod-podkast-pro-mir-ruby/id597248066">
+  <a
+    class="social-button"
+    target="_blank"
+    rel="noopener noreferrer"
+    href="https://itunes.apple.com/podcast/rwpod-podkast-pro-mir-ruby/id597248066"
+  >
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="apple" />
     </div>
-    Apple Podcasts
+     Apple Podcasts
   </a>
-  <a class="social-button" target="_blank" rel="noopener noreferrer" href="https://podcasts.google.com/feed/aHR0cHM6Ly93d3cucndwb2QuY29tL2FyY2hpdmUueG1s">
+  <a
+    class="social-button"
+    target="_blank"
+    rel="noopener noreferrer"
+    href="https://podcasts.google.com/feed/aHR0cHM6Ly93d3cucndwb2QuY29tL2FyY2hpdmUueG1s"
+  >
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="google-podcast" />
     </div>
-    Google Podcasts
+     Google Podcasts
   </a>
-  <a class="social-button" target="_blank" rel="noopener noreferrer" href="https://open.spotify.com/show/6uNLdp7BBCG4oFD3Ih5vnN">
+  <a
+    class="social-button"
+    target="_blank"
+    rel="noopener noreferrer"
+    href="https://open.spotify.com/show/6uNLdp7BBCG4oFD3Ih5vnN"
+  >
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="spotify" />
     </div>
-    Spotify
+     Spotify
   </a>
-  <a class="social-button" target="_blank" rel="noopener noreferrer" href="https://music.amazon.com/podcasts/8f05b42f-36e2-466b-96ac-dc183ffd112b/rwpod---%D0%BF%D0%BE%D0%B4%D0%BA%D0%B0%D1%81%D1%82-%D0%BF%D1%80%D0%BE-ruby-%D1%82%D0%B0-web-%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D1%96%D1%97">
+  <a
+    class="social-button"
+    target="_blank"
+    rel="noopener noreferrer"
+    href="https://music.amazon.com/podcasts/8f05b42f-36e2-466b-96ac-dc183ffd112b/rwpod---%D0%BF%D0%BE%D0%B4%D0%BA%D0%B0%D1%81%D1%82-%D0%BF%D1%80%D0%BE-ruby-%D1%82%D0%B0-web-%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D1%96%D1%97"
+  >
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="aws" />
     </div>
-    Amazon
+     Amazon
   </a>
   <a class="social-button" target="_blank" rel="noopener noreferrer" href="https://t.me/rwpod">
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="telegram" />
     </div>
-    Telegram
+     Telegram
   </a>
-  <a class="social-button" target="_blank" rel="noopener noreferrer" href="https://twitter.com/rwpod">
+  <a
+    class="social-button"
+    target="_blank"
+    rel="noopener noreferrer"
+    href="https://twitter.com/rwpod"
+  >
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="twitter" />
     </div>
-    Twitter
+     Twitter
   </a>
-  <a class="social-button" target="_blank" rel="noopener noreferrer" href="http://www.facebook.com/rwpod">
+  <a
+    class="social-button"
+    target="_blank"
+    rel="noopener noreferrer"
+    href="http://www.facebook.com/rwpod"
+  >
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="facebook" />
     </div>
-    Facebook
+     Facebook
   </a>
-  <a class="social-button" target="_blank" rel="noopener noreferrer" href="mailto:%72%77%70%6f%64.%63%6f%6d@%67%6d%61%69%6c.%63%6f%6d">
+  <a
+    class="social-button"
+    target="_blank"
+    rel="noopener noreferrer"
+    href="mailto:%72%77%70%6f%64.%63%6f%6d@%67%6d%61%69%6c.%63%6f%6d"
+  >
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="email" />
     </div>
-    Написати нам
+     Написати нам
   </a>
-  <a class="social-button" target="_blank" rel="noopener noreferrer" href="https://www.buymeacoffee.com/leopard">
+  <a
+    class="social-button"
+    target="_blank"
+    rel="noopener noreferrer"
+    href="https://www.buymeacoffee.com/leopard"
+  >
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="thumb-up" />
     </div>
-    Підтримати нас
+     Підтримати нас
   </a>
 </div>
