--- a/src/components/TopPosts.astro
+++ b/src/components/TopPosts.astro
@@ -4,6 +4,7 @@ import Sidebar from '@components/Sidebar.astro'
 
 const { posts } = Astro.props
 ---
+
 <style>
   .articles-block {
     display: flex;
@@ -50,9 +51,7 @@ const { posts } = Astro.props
 <div class="articles-block">
   <div class="mainbar">
     <div class="posts-top-list">
-      {posts.map((post) => (
-        <PostBlock class="posts-top-item" post={post} />
-      ))}
+      {posts.map((post) => <PostBlock class="posts-top-item" post={post} />)}
     </div>
   </div>
   <div class="sidebar">
