--- a/src/pages/archives/[...page].astro
+++ b/src/pages/archives/[...page].astro
@@ -5,9 +5,7 @@ import BottomPosts from '@components/BottomPosts.astro'
 import Pages from '@components/Pages.astro'
 import { getPosts } from '@utils/posts'
 
-export const getStaticPaths = async ({ paginate }) => (
-  paginate(await getPosts(), { pageSize: 10 })
-)
+export const getStaticPaths = async ({ paginate }) => paginate(await getPosts(), { pageSize: 10 })
 
 const { page } = Astro.props
 
@@ -15,6 +13,7 @@ const TOP_POSTS_SIZE = 4
 const topPosts = page.data.slice(0, TOP_POSTS_SIZE)
 const bottomPosts = page.data.slice(TOP_POSTS_SIZE)
 ---
+
 <style>
   .archive-title {
     display: flex;
