--- a/src/pages/podcasts/[...page].astro
+++ b/src/pages/podcasts/[...page].astro
@@ -3,12 +3,11 @@ import AppLayout from '@layouts/app.astro'
 import Pages from '@components/Pages.astro'
 import { getPosts } from '@utils/posts'
 
-export const getStaticPaths = async ({ paginate }) => (
-  paginate(await getPosts(), { pageSize: 30 })
-)
+export const getStaticPaths = async ({ paginate }) => paginate(await getPosts(), { pageSize: 30 })
 
 const { page } = Astro.props
 ---
+
 <style>
   .podcasts-title {
     display: flex;
@@ -34,14 +33,13 @@ const { page } = Astro.props
     Подкасти - #{page.currentPage} сторінка
   </h1>
   <ul class="post-list">
-    {page.data.map((post) => (
-      <li class="post-list-item">
-        [{post.data.formatedDate}]
-        <a href={post.url}>
-          {post.data.title}
-        </a>
-      </li>
-    ))}
+    {
+      page.data.map((post) => (
+        <li class="post-list-item">
+          [{post.data.formatedDate}]<a href={post.url}>{post.data.title}</a>
+        </li>
+      ))
+    }
   </ul>
   <Pages page={page} />
 </AppLayout>
