--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -118,7 +118,7 @@ const navigationClasses = (path = '/', isRight = false) => {
   <div class="navigation-wrapper">
     <ul class="navigation">
       <li class="logo-wrapper">
-        <a href="/">
+        <a href="/" aria-label="Go to homepage">
           <div class="logo" set:html={LogoSVG} />
         </a>
       </li>
