--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -144,7 +144,7 @@ import SvgIcon from '@components/SvgIcon.astro'
     href="https://www.buymeacoffee.com/leopard"
   >
     <div class="social-button-icon">
-      <SvgIcon size="2.5rem" name="thumb-up" />
+      <SvgIcon size="2.5rem" name="cash" />
     </div>
      Підтримати нас
   </a>
