--- a/src/pages/podcasts/[...page].astro
+++ b/src/pages/podcasts/[...page].astro
@@ -36,7 +36,7 @@ const { page } = Astro.props
     {
       page.data.map((post) => (
         <li class="post-list-item">
-          [{post.data.formatedDate}]<a href={post.url}>{post.data.title}</a>
+          [{post.data.formatedDate}]&nbsp;<a href={post.url}>{post.data.title}</a>
         </li>
       ))
     }
