--- a/src/components/MainPost.astro
+++ b/src/components/MainPost.astro
@@ -85,6 +85,7 @@ const audioInfo = {
 
   .article-data-title {
     margin-bottom: 0.3rem;
+    text-wrap: balance;
   }
 
   .article-media-info {
