--- a/src/components/SvgIcon.astro
+++ b/src/components/SvgIcon.astro
@@ -1,5 +1,5 @@
 ---
-import { Sprite } from 'astro-icon'
+import { Icon } from 'astro-icon/components'
 
 const { name, class: className, size = '1rem' } = Astro.props
 ---
@@ -24,5 +24,5 @@ const { name, class: className, size = '1rem' } = Astro.props
 </style>
 
 <div class:list={['svg-icon', className]}>
-  <Sprite pack="mdi" name={name} class="svg-icon-cnt" />
+  <Icon name={`mdi:${name}`} class="svg-icon-cnt" />
 </div>
