--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -42,6 +42,17 @@ import SvgIcon from '@components/SvgIcon.astro'
 <h2 class="social-header">Підпишись на нас</h2>
 
 <div class="social-buttons-list">
+  <a
+    class="social-button"
+    target="_blank"
+    rel="noopener noreferrer"
+    href="https://war.ukraine.ua/"
+  >
+    <div class="social-button-icon">
+      <SvgIcon size="2.5rem" name="help-outline" />
+    </div>
+     Support Ukraine!!!
+  </a>
   <a class="social-button" href="/rss.xml">
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="rss-box" />
