--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -37,13 +37,17 @@ import SvgIcon from '@components/SvgIcon.astro'
     justify-content: center;
     align-items: center;
   }
+
+  .social-button-ua {
+    background: linear-gradient(to right, #004ff961, #fff94c61);
+  }
 </style>
 
 <h2 class="social-header">Підпишись на нас</h2>
 
 <div class="social-buttons-list">
   <a
-    class="social-button"
+    class="social-button social-button-ua"
     target="_blank"
     rel="noopener noreferrer"
     href="https://war.ukraine.ua/"
