--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,17 +1,5 @@
 :root {
-  font-size: 14px;
-}
-
-@media (min-width: 420px) and (max-width: 2048px) {
-  :root {
-    font-size: calc(14px + (18 - 14) * ((100vw - 420px) / (2048 - 420)));
-  }
-}
-
-@media (min-width: 2048px) {
-  :root {
-    font-size: 18px;
-  }
+  font-size: calc(0.875rem + 0.2vw);
 }
 
 body {
