--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -14,6 +14,14 @@ import SvgIcon from '@components/SvgIcon.astro'
     gap: 0.5rem;
   }
 
+  .social-icons-row {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    width: 14rem;
+  }
+
   .social-button {
     display: flex;
     align-items: center;
@@ -23,13 +31,16 @@ import SvgIcon from '@components/SvgIcon.astro'
     color: hsl(13deg 70% 30%);
     padding: 0.5rem;
     background: transparent;
-    width: 14rem;
   }
 
   .social-button:hover,
   .social-button:focus {
     border-color: hsl(44, 14%, 40%);
     color: hsl(13deg 50% 25%);
+  }
+
+  .social-button__full {
+    width: 14rem;
   }
 
   .social-button-icon {
@@ -47,7 +58,7 @@ import SvgIcon from '@components/SvgIcon.astro'
 
 <div class="social-buttons-list">
   <a
-    class="social-button social-button-ua"
+    class="social-button social-button__full social-button-ua"
     target="_blank"
     rel="noopener noreferrer"
     href="https://war.ukraine.ua/"
@@ -55,112 +66,126 @@ import SvgIcon from '@components/SvgIcon.astro'
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="help-outline" />
     </div>
-     Support Ukraine!!!
+    Support Ukraine!!!
   </a>
-  <a class="social-button" href="/rss.xml">
+
+  <div class="social-icons-row">
+    <a
+      class="social-button"
+      target="_blank"
+      rel="noopener noreferrer"
+      href="https://t.me/rwpod"
+      title="Telegram"
+    >
+      <div class="social-button-icon">
+        <SvgIcon size="2rem" name="telegram" />
+      </div>
+    </a>
+    <a
+      class="social-button"
+      target="_blank"
+      rel="noopener noreferrer"
+      href="https://twitter.com/rwpod"
+      title="Twitter"
+    >
+      <div class="social-button-icon">
+        <SvgIcon size="2rem" name="twitter" />
+      </div>
+    </a>
+    <a
+      class="social-button"
+      target="_blank"
+      rel="noopener noreferrer"
+      href="http://www.facebook.com/rwpod"
+      title="Facebook"
+    >
+      <div class="social-button-icon">
+        <SvgIcon size="2rem" name="facebook" />
+      </div>
+    </a>
+    <a
+      class="social-button"
+      target="_blank"
+      rel="noopener noreferrer"
+      href="mailto:%72%77%70%6f%64.%63%6f%6d@%67%6d%61%69%6c.%63%6f%6d"
+    >
+      <div class="social-button-icon">
+        <SvgIcon size="2rem" name="email" />
+      </div>
+    </a>
+  </div>
+
+  <a class="social-button social-button__full" href="/rss.xml" title="MP3 RSS Feed">
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="rss-box" />
     </div>
-     MP3 RSS Feed
+    MP3 RSS Feed
   </a>
-  <a class="social-button" href="/rss-aac.xml">
+  <a class="social-button social-button__full" href="/rss-aac.xml" title="AAC RSS Feed">
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="cast-audio" />
     </div>
-     AAC RSS Feed
+    AAC RSS Feed
   </a>
   <a
-    class="social-button"
+    class="social-button social-button__full"
     target="_blank"
     rel="noopener noreferrer"
     href="https://itunes.apple.com/podcast/rwpod-podkast-pro-mir-ruby/id597248066"
+    title="Apple Podcasts"
   >
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="apple" />
     </div>
-     Apple Podcasts
+    Apple Podcasts
   </a>
   <a
-    class="social-button"
+    class="social-button social-button__full"
     target="_blank"
     rel="noopener noreferrer"
     href="https://podcasts.google.com/feed/aHR0cHM6Ly93d3cucndwb2QuY29tL2FyY2hpdmUueG1s"
+    title="Google Podcasts"
   >
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="google-podcast" />
     </div>
-     Google Podcasts
+    Google Podcasts
   </a>
   <a
-    class="social-button"
+    class="social-button social-button__full"
     target="_blank"
     rel="noopener noreferrer"
     href="https://open.spotify.com/show/6uNLdp7BBCG4oFD3Ih5vnN"
+    title="Spotify"
   >
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="spotify" />
     </div>
-     Spotify
+    Spotify
   </a>
   <a
-    class="social-button"
+    class="social-button social-button__full"
     target="_blank"
     rel="noopener noreferrer"
     href="https://music.amazon.com/podcasts/8f05b42f-36e2-466b-96ac-dc183ffd112b/rwpod---%D0%BF%D0%BE%D0%B4%D0%BA%D0%B0%D1%81%D1%82-%D0%BF%D1%80%D0%BE-ruby-%D1%82%D0%B0-web-%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D1%96%D1%97"
+    title="Amazon"
   >
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="aws" />
     </div>
-     Amazon
+    Amazon
   </a>
-  <a class="social-button" target="_blank" rel="noopener noreferrer" href="https://t.me/rwpod">
-    <div class="social-button-icon">
-      <SvgIcon size="2.5rem" name="telegram" />
-    </div>
-     Telegram
-  </a>
+
   <a
-    class="social-button"
-    target="_blank"
-    rel="noopener noreferrer"
-    href="https://twitter.com/rwpod"
-  >
-    <div class="social-button-icon">
-      <SvgIcon size="2.5rem" name="twitter" />
-    </div>
-     Twitter
-  </a>
-  <a
-    class="social-button"
-    target="_blank"
-    rel="noopener noreferrer"
-    href="http://www.facebook.com/rwpod"
-  >
-    <div class="social-button-icon">
-      <SvgIcon size="2.5rem" name="facebook" />
-    </div>
-     Facebook
-  </a>
-  <a
-    class="social-button"
-    target="_blank"
-    rel="noopener noreferrer"
-    href="mailto:%72%77%70%6f%64.%63%6f%6d@%67%6d%61%69%6c.%63%6f%6d"
-  >
-    <div class="social-button-icon">
-      <SvgIcon size="2.5rem" name="email" />
-    </div>
-     Написати нам
-  </a>
-  <a
-    class="social-button"
+    class="social-button social-button__full"
     target="_blank"
     rel="noopener noreferrer"
     href="https://www.buymeacoffee.com/leopard"
+    title="Support"
   >
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="cash" />
     </div>
-     Підтримати нас
+    Підтримати нас
   </a>
 </div>
