replace google podcasts on youtube podcasts

--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -95,6 +95,7 @@ import SvgIcon from '@components/SvgIcon.astro'
       rel="noopener noreferrer"
       href="https://t.me/rwpod"
       title="Telegram"
+      aria-label="Telegram"
     >
       <div class="social-button-icon">
         <SvgIcon size="2rem" name="telegram" />
@@ -106,6 +107,7 @@ import SvgIcon from '@components/SvgIcon.astro'
       rel="noopener noreferrer"
       href="https://twitter.com/rwpod"
       title="Twitter"
+      aria-label="Twitter"
     >
       <div class="social-button-icon">
         <SvgIcon size="2rem" name="twitter" />
@@ -117,6 +119,7 @@ import SvgIcon from '@components/SvgIcon.astro'
       rel="noopener noreferrer"
       href="http://www.facebook.com/rwpod"
       title="Facebook"
+      aria-label="Facebook"
     >
       <div class="social-button-icon">
         <SvgIcon size="2rem" name="facebook" />
@@ -127,6 +130,7 @@ import SvgIcon from '@components/SvgIcon.astro'
       target="_blank"
       rel="noopener noreferrer"
       href="mailto:%72%77%70%6f%64.%63%6f%6d@%67%6d%61%69%6c.%63%6f%6d"
+      aria-label="Email"
     >
       <div class="social-button-icon">
         <SvgIcon size="2rem" name="email" />
@@ -139,8 +143,21 @@ import SvgIcon from '@components/SvgIcon.astro'
       class="social-button"
       target="_blank"
       rel="noopener noreferrer"
+      href="https://www.youtube.com/playlist?list=PLqEvNPqHnjzgo6s14hXTInS2L3iL-zwDj"
+      title="Youtube Podcasts"
+      aria-label="Youtube Podcasts"
+    >
+      <div class="social-button-icon">
+        <SvgIcon size="2rem" name="youtube-subscription" />
+      </div>
+    </a>
+    <a
+      class="social-button"
+      target="_blank"
+      rel="noopener noreferrer"
       href="https://itunes.apple.com/podcast/rwpod-podkast-pro-mir-ruby/id597248066"
       title="Apple Podcasts"
+      aria-label="Apple Podcasts"
     >
       <div class="social-button-icon">
         <SvgIcon size="2rem" name="apple" />
@@ -150,19 +167,9 @@ import SvgIcon from '@components/SvgIcon.astro'
       class="social-button"
       target="_blank"
       rel="noopener noreferrer"
-      href="https://podcasts.google.com/feed/aHR0cHM6Ly93d3cucndwb2QuY29tL2FyY2hpdmUueG1s"
-      title="Google Podcasts"
-    >
-      <div class="social-button-icon">
-        <SvgIcon size="2rem" name="google-podcast" />
-      </div>
-    </a>
-    <a
-      class="social-button"
-      target="_blank"
-      rel="noopener noreferrer"
       href="https://open.spotify.com/show/6uNLdp7BBCG4oFD3Ih5vnN"
       title="Spotify"
+      aria-label="Spotify"
     >
       <div class="social-button-icon">
         <SvgIcon size="2rem" name="spotify" />
@@ -174,6 +181,7 @@ import SvgIcon from '@components/SvgIcon.astro'
       rel="noopener noreferrer"
       href="https://music.amazon.com/podcasts/8f05b42f-36e2-466b-96ac-dc183ffd112b/rwpod---%D0%BF%D0%BE%D0%B4%D0%BA%D0%B0%D1%81%D1%82-%D0%BF%D1%80%D0%BE-ruby-%D1%82%D0%B0-web-%D1%82%D0%B5%D1%85%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D1%96%D1%97"
       title="Amazon"
+      aria-label="Amazon"
     >
       <div class="social-button-icon">
         <SvgIcon size="2rem" name="aws" />
