--- a/src/components/MainPost.astro
+++ b/src/components/MainPost.astro
@@ -156,6 +156,7 @@ const audioInfo = {
           <div class="article-main-image-wrapper">
             <img
               class="article-main-image"
+              fetchpriority="high"
               src={postImg.src}
               srcset={postImg.srcset}
               alt={post.data.title}
