--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -143,7 +143,7 @@ import SvgIcon from '@components/SvgIcon.astro'
       class="social-button"
       target="_blank"
       rel="noopener noreferrer"
-      href="https://www.youtube.com/playlist?list=PLqEvNPqHnjzgo6s14hXTInS2L3iL-zwDj"
+      href="https://www.youtube.com/@Rwpod/videos"
       title="Youtube Podcasts"
       aria-label="Youtube Podcasts"
     >
