--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -66,7 +66,7 @@ import SvgIcon from '@components/SvgIcon.astro'
     href="https://war.ukraine.ua/"
   >
     <div class="social-button-icon">
-      <SvgIcon size="2.5rem" name="help-outline" />
+      <SvgIcon size="2.5rem" name="charity" />
     </div>
     Support Ukraine!!!
   </a>
