--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -63,7 +63,7 @@ import SvgIcon from '@components/SvgIcon.astro'
     class="social-button social-button__full social-button-ua"
     target="_blank"
     rel="noopener noreferrer"
-    href="https://war.ukraine.ua/"
+    href="https://standforukraine.com/"
   >
     <div class="social-button-icon">
       <SvgIcon size="2.5rem" name="charity" />
